# datapact

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  FRONTEND.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-azure.yml  terraform.yml
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json
frontend/src/: App.tsx
infrastructure/terraform/: acr.tf  app_service.tf  communication.tf  data.tf  database.tf  (+6 more)
scripts/: init-db.sh
services/compliance-monitor/: Dockerfile  pyproject.toml
services/compliance-monitor/src/compliance_monitor/: __init__.py  celery_app.py  config.py
services/compliance-monitor/src/compliance_monitor/checks/: __init__.py  base.py  completeness_checker.py  freshness_checker.py  schema_validator.py
services/compliance-monitor/src/compliance_monitor/reporters/: __init__.py  email.py  slack.py
services/compliance-monitor/src/compliance_monitor/tasks/: __init__.py  availability_check.py  quality_check.py  schema_check.py
services/compliance-monitor/tests/: __init__.py  conftest.py  test_quality_checkers.py  test_schema_validator.py
services/contract-service/: Dockerfile  Dockerfile.dev  pyproject.toml  startup.sh
services/contract-service/alembic/: env.py
services/contract-service/alembic/versions/: 001_initial_schema.py
services/contract-service/src/contract_service/: __init__.py  config.py  database.py  main.py
services/contract-service/src/contract_service/api/: __init__.py  dependencies.py
services/contract-service/src/contract_service/api/routes/: __init__.py  contracts.py  fields.py  subscribers.py  validation.py  webhooks.py
services/contract-service/src/contract_service/models/: __init__.py  access.py  base.py  compliance.py  contract.py  field.py  quality.py  subscriber.py  version.py
services/contract-service/src/contract_service/schemas/: __init__.py  access.py  contract.py  field.py  quality.py  subscriber.py
services/contract-service/src/contract_service/services/: __init__.py  contract_service.py  github_service.py
services/contract-service/src/contract_service/utils/: __init__.py  yaml_parser.py
services/contract-service/tests/: __init__.py  conftest.py  test_contracts.py  test_github_service.py  test_subscribers.py  test_validation.py  test_webhooks.py  test_yaml_parser.py
services/dictionary-service/: Dockerfile  pyproject.toml
services/dictionary-service/src/dictionary_service/: __init__.py  config.py  main.py
services/dictionary-service/src/dictionary_service/api/: __init__.py
services/dictionary-service/src/dictionary_service/api/routes/: __init__.py  dictionary.py  erd.py  search.py
services/dictionary-service/src/dictionary_service/services/: __init__.py  aggregator.py  erd_generator.py  search_service.py
services/dictionary-service/src/dictionary_service/templates/: erd.mermaid.jinja2
services/dictionary-service/tests/: __init__.py  conftest.py  test_aggregator.py  test_erd_generator.py  test_search.py
services/notification-service/: Dockerfile  alembic.ini  pyproject.toml  startup.sh
services/notification-service/alembic/: env.py
services/notification-service/alembic/versions/: 001_initial_notification_schema.py
services/notification-service/src/notification_service/: __init__.py  celery_app.py  config.py  database.py  main.py
services/notification-service/src/notification_service/api/: __init__.py
services/notification-service/src/notification_service/api/routes/: __init__.py  events.py  notifications.py  watchers.py
services/notification-service/src/notification_service/channels/: __init__.py  azure_email.py  base.py  email.py
services/notification-service/src/notification_service/models/: __init__.py  base.py  notification.py  watcher.py
services/notification-service/src/notification_service/schemas/: __init__.py  events.py  notification.py  watcher.py
services/notification-service/src/notification_service/services/: __init__.py  recipient_resolver.py  router.py  template_renderer.py
services/notification-service/src/notification_service/tasks/: __init__.py  send_notification.py
services/notification-service/src/notification_service/templates/email/: base.html  contract_updated.html  deprecation_warning.html  digest.html  pr_blocked.html  quality_breach.html  schema_drift.html
services/notification-service/tests/: conftest.py  test_events.py  test_health.py  test_notifications.py  test_watchers.py
services/template-data-service/: Dockerfile  Dockerfile.dev  contract.yaml  pyproject.toml  startup.sh
services/template-data-service/alembic/: env.py
services/template-data-service/alembic/versions/: 001_initial_schema.py
services/template-data-service/src/data_service/: __init__.py  config.py  database.py  main.py
services/template-data-service/src/data_service/api/: __init__.py
services/template-data-service/src/data_service/api/routes/: __init__.py  data.py  health.py  metrics.py  schema.py
services/template-data-service/src/data_service/metrics/: __init__.py  collector.py
services/template-data-service/src/data_service/models/: __init__.py  example.py
services/template-data-service/src/data_service/schemas/: __init__.py  example.py
services/template-data-service/tests/: __init__.py  conftest.py  test_endpoints.py
shared/datapact_common/: pyproject.toml
shared/datapact_common/src/datapact_common/: __init__.py  constants.py  contract_schema.py  exceptions.py
shared/datapact_common/tests/: __init__.py  test_contract_schema.py
(+35 files in other folders)
